cola/test/corpus/tests.txt
==================
simple_definition Test
==================

[1] Alice IS Bob

---

(contract 
    (component 
    (definition
    (simple_definition
    (identity
    (num))
    (subject
    (string))
    (subject
    (string))
    ))))

==================
simple_statement Test
==================

[1] it is not the case that on the 7 January 26 Alice OBLIGATION PAY OTHEROBJECT objectthing

---

(contract 
    (component 
        (statement
            (simple_statement
                (identity
                    (num))
                (holds)
                (date
                    (num)
                    (month)
                    (num))
                (subject
                    (string))
                (modal_verb)
                (verb)
                (object
                    (nonnumerical_object
                        (string)))
    ))))
